add swag for 0.3.0
